Fixed Header Visibility Issue

--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur(1px);
+  background: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(200px);
   border-radius: 2px;
   box-shadow: 1px 1px 10px 0px rgba(250, 250, 250, 0.3);
@@ -829,6 +829,8 @@ a {
 .main-nav .nav-links {
   display: flex;
   gap: 3rem;
+  font-weight: 700;
+  font-size: 1.2em;
 }
 
 @media (max-width: 768px) {
